src/character/race/snapshots/bag_of_tricks__character__race__dwarf__tests__snapshot.snap
---
source: src/character/race/dwarf.rs
expression: dwarf

---
- type: Dwarf
  subrace: Hill
- Hlin Holderhek
- age: 49
  base_speed: 25
  gender: Female
  height: 49
  size: Medium
  weight: 170

