src/character/race/snapshots/bag_of_tricks__character__race__dwarf__tests__snapshot_abilities-2.snap
---
source: src/character/race/dwarf.rs
expression: dwarf.abilities()
---
- - Constitution
  - 2
- - Strength
  - 2
