src/character/race/snapshots/bag_of_tricks__character__race__dwarf__tests__snapshot_abilities.snap
---
source: src/character/race/dwarf.rs
expression: "DwarfSubrace::iter().map(|subrace|\n                             (Dwarf{subrace,}).abilities()).collect::<Vec<Vec<AbilityScore>>>()"

---
- - - Constitution
    - 2
  - - Strength
    - 1
- - - Constitution
    - 2
  - - Wisdom
    - 1
- - - Constitution
    - 2
  - - Wisdom
    - 1
- - - Constitution
    - 2
  - - Strength
    - 2
- - - Constitution
    - 2
  - - Strength
    - 2

