src/character/race/snapshots/bag_of_tricks__character__race__dwarf__tests__snapshot_citations-2.snap
---
source: src/character/race/dwarf.rs
expression: dwarf.citations()
---
- book: PHB
  page: 18
- book: PHB
  page: 20
