src/character/race/snapshots/bag_of_tricks__character__race__dwarf__tests__snapshot_citations.snap
---
source: src/character/race/dwarf.rs
expression: "DwarfSubrace::iter().map(|subrace|\n                             (Dwarf{subrace,}).citations()).collect::<Vec<CitationList>>()"

---
- - - Phb
    - 18
  - - Scag
    - 104
- - - Phb
    - 18
  - - Phb
    - 20
- - - Phb
    - 18
  - - Phb
    - 20

