src/character/race/snapshots/bag_of_tricks__character__race__dwarf__tests__snapshot_display.snap
---
source: src/character/race/dwarf.rs
expression: "DwarfSubrace::iter().map(|subrace|\n                             format!(\"{}\", Dwarf\n                                     {\n                                         subrace\n                                     })).collect::<Vec<String>>().join(\"\\n\\n\")"

---
Duergar Dwarf

Gold Dwarf

Hill Dwarf

Mountain Dwarf

Shield Dwarf
