src/character/race/snapshots/bag_of_tricks__character__race__dwarf__tests__snapshot_features-2.snap
---
source: src/character/race/dwarf.rs
expression: dwarf.features()
---
- title: Ability Score Increase
  description: Your Constitution score increases by 2.
  citation:
    book: PHB
    page: 20
- title: Ability Score Increase
  description: Your Strength score increases by 2.
  citation:
    book: PHB
    page: 20
