src/character/race/snapshots/bag_of_tricks__character__race__dwarf__tests__snapshot_gen_name.snap
---
source: src/character/race/dwarf.rs
expression: "Dwarf::gen_name(&mut rng, &Gender::Female)"
---
Bardryn Ironfist
